# banking-widget1

./: .coverage  .env.example  .flake8  .gitignore  README.md  log.txt  main.py  pyproject.toml  requirements.txt
data/: operations.json
src/: .flake8  .isort.cfg  external_api.py  file_reader.py  masks.py  processing.py  reports.py  services.py  utils.py  views.py  widget.py
src/decorators/: decorators.py
src/generators/: generators.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_file_reader.py  test_generators.py  test_masks.py  test_processing.py  test_services.py  test_utils.py  test_widget.py
