[tool.poetry]
name = "bank_project"
version = "0.1.0"
description = "Проект по маскировке банковских реквизитов"
authors = ["Ваше Имя <email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
flake8 = "*"
black = "*"
isort = "*"
mypy = "*"


[tool.poetry.group.dev.dependencies]
mypy = "^1.18.1"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black
[tool.black]
line-length = 119
target-version = ['py39']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
)/
'''

# isort
[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
force_sort_within_sections = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_after_imports = 2

# mypy
[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ["venv"]

# Поиск пакетов в src
[tool.setuptools.packages.find]
where = ["src"]